@@ -3,10 +3,10 @@
 var chrome = chrome || {};
 
 chrome.news = [
-	{date: '6 May, 2009', text: 'Pretty URLs 0.9.3 is released! This fixes a few significant bugs, so it is recommend you upgrade now! :)'},
+	{date: '6 May, 2009', text: 'Pretty URLs 0.9.3 is released! This fixes a few significant bugs, so it is recommended that you upgrade now! :)'},
 	{date: '25 March, 2009', text: 'Pretty URLs 0.9.2 released'},
 	{date: '24 Feb, 2009', text: 'Pretty URLs 0.9.1 released'},
-	{date: '12 Nov, 2008', text: 'Pretty URLs 0.9 released'}	
+	{date: '12 Nov, 2008', text: 'Pretty URLs 0.9 released'}
 ];
 
 chrome.latestVersion = '0.9.3';
